--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
   "type": "module",
   "main": "server.ts",
   "scripts": {
-    "dev": "nodemon server.ts"
+    "dev": "nodemon --exec tsx server.ts"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
+    "@types/bcrypt": "^6.0.0",
     "@types/express": "^5.0.6",
     "@types/http-errors": "^2.0.5",
     "@types/node": "^24.10.2",
@@ -25,9 +26,12 @@
   },
   "dependencies": {
     "@types/dotenv": "^6.1.1",
+    "@types/jsonwebtoken": "^9.0.10",
+    "bcrypt": "^6.0.0",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "http-errors": "^2.0.1",
+    "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.0.1"
   }
 }
